--- a/config/database.yml
+++ b/config/database.yml
@@ -5,10 +5,10 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: wignitelivechat_development
+  database: livechat_development
   pool: 5
   timeout: 5000
-  username: wignitelivechat
+  username: livechat
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
